package com.badlogic.debugthugs;

public class Events {

}
